@@ -1,3 +1,8 @@
+2006-09-27  Vlad Seryakov  <seryakov@users.sf.net>
+
+	* nsd/config.c: Changed log Debug level to Dev level
+	to make logfile not filled with too many debug messages
+
 2006-09-27  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>
 
 	* nsproxy/nsproxylib.c: Added "-maxruns" parameter for proxy queue
